# mentorix

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  Mentorix - Medium - Blogs.txt  README.md  docker-compose.yml  env_template  pytest.ini
API/: .dockerignore  API_README.md  Dockerfile  alembic.ini  pyproject.toml
API/alembic/: env.py
API/alembic/versions/: 20260219_0001_baseline.py  20260221_0002_grounding_ingestion_tables.py  20260221_0003_weekly_plan_progression_tables.py  20260222_0004_profile_timeline_fields.py  20260222_0005_weekly_forecasts_table.py  20260222_0006_tasks_and_task_attempts.py  20260222_0007_revision_queue_policy_violations.py  20260222_0008_weekly_plan_versions.py  20260222_0009_revision_policy_state.py  20260222_0010_profile_snapshots_engagement_events.py  20260222_0011_syllabus_hierarchy.py  20260225_0012_student_auth.py  20260225_0013_add_math_9_percent_to_profile.py  20260225_0014_add_onboarding_diagnostic_score.py  20260226_0015_add_school_to_learners.py  (+2 more)
API/app/: Dockerfile  __init__.py  main.py  pyproject.toml
API/app/api/: admin.py  (+12 more)
API/scripts/: backfill_memory_to_mongo.py  evaluate_retrieval_quality.py  export_memory_from_mongo.py  onboard_course.py  verify_phase0.py  verify_phase1_schema.py
API/tests/: conftest.py  test_adaptive_week_replan.py  test_cache_and_question_quality.py  test_chapter_progression.py  test_iteration11_smoke.py  test_iteration13.py  test_learning_flow.py  test_rag_grounding_compliance.py  test_session17_compliance.py  test_session19_concepts.py  test_threshold_logic.py
(+219 files in other folders)
